Component API add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<h1>
-  Angular
-</h1>
-<favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChange()"></favorite>
-<courses></courses>
+<favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChange"></favorite>
